Archive2/fe/f4a0ba04531bd9/output
main.cpp:7:23: error: expected ';' at end of declaration
    std::vector<int> c{0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
                      ^
                      ;
main.cpp:8:10: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    for (auto &i : c) {
         ^
main.cpp:8:18: error: range-based for loop is a C++11 extension [-Werror,-Wc++11-extensions]
    for (auto &i : c) {
                 ^
main.cpp:15:10: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    for (auto &i : c) {
         ^
main.cpp:15:18: error: range-based for loop is a C++11 extension [-Werror,-Wc++11-extensions]
    for (auto &i : c) {
                 ^
main.cpp:22:10: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    for (auto &i : c) {
         ^
main.cpp:22:18: error: range-based for loop is a C++11 extension [-Werror,-Wc++11-extensions]
    for (auto &i : c) {
                 ^
main.cpp:26:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
8 errors generated.
